Removing the code for stage annotation and visualizations now separated and placed into 'm22_qcd_anotn.Rmd'

--- a/integration/m22_raw_integration.Rmd
+++ b/integration/m22_raw_integration.Rmd
@@ -132,272 +132,13 @@ source_irods <- pf_solo_mixed_mdata_decode_slct[,c('sample_nm', 'irods_id')] %>%
 
 ```{r, message=F, warning=F}
 ##Read BPcells matrices
-all_msc_cb_no_dbt_sct <- list.files("data/processed/Pf", pattern = "all_msc_cb_no_dbt_sct.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj/|all_msc_cb_no_dbt_sct.RDS'))) %>% 
+all_msc_qcd_anotd <- list.files("data/processed/Pf", pattern = "all_msc_qcd_anotd.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj/|all_msc_qcd_anotd.RDS'))) %>% 
   # .[sample_name_all] %>%
   .[sample_name] %>%
   map(readRDS)
 ```
 
-
-```{r, message=F, warning=F}
-##Read BPcells matrices
-all_msc_cb_no_dbt_sct_anotd <- list.files("data/processed/Pf", pattern = "all_msc_cb_no_dbt_sct_prelim_anotd.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj/|all_msc_cb_no_dbt_sct_prelim_anotd.RDS'))) %>% 
-# all_msc_cb_no_dbt_sct_multi_ref_anotd <- list.files("data/processed/Pf", pattern = "all_msc_cb_no_dbt_sct_multi_ref_anotd.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-#   set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj/|all_msc_cb_no_dbt_sct_multi_ref_anotd.RDS'))) %>% 
-  # .[sample_name_all] %>%
-  .[sample_name] %>%
-  map(readRDS)
-```
-
-
-```{r}
-##Modify the stage labels for MSC14
-
-multi_ref_stg_tbl1 <- map(all_msc_cb_no_dbt_sct_anotd, ~{
-  obj <- .x
-  map(c("stages_mca", "stages_lasse"), ~{
-    obj %>% 
-  filter(ref == .x ) %>%
-  mutate(!!rlang::sym(paste0(.x, "_lf")) := case_when(
-    !!rlang::sym(paste0(.x, "_lab")) == "unassigned" & if_any(starts_with("sim_"), ~.x > 0.3) & if_all(starts_with("stage_"), ~str_detect(.x, "ring|rophozoite|eveloping|Ring|chizont")) ~ stage_lab1,
-    !!rlang::sym(paste0(.x, "_lab")) == "unassigned" & if_any(starts_with("sim_"), ~.x > 0.4) & if_all(starts_with("stage_"), ~str_detect(.x, "Male| male|\\(male|eveloping")) ~ stage_lab1,
-    !!rlang::sym(paste0(.x, "_lab")) == "unassigned" & if_any(starts_with("sim_"), ~.x > 0.4) & if_all(starts_with("stage_"), ~str_detect(.x, "Female|female|eveloping")) ~ stage_lab1,
-    TRUE ~ !!rlang::sym(paste0(.x, "_lab"))
-  )) #%>%
-  #filter(StagePrelim_lf == "unassigned") %>%
-  #select(contains("stage"), contains("sim"), StagePrelim_lf, combined_labs)
-})
-})
-
-```
-
-
-
-```{r}
-map(multi_ref_stg_tbl1, ~.x[[1]] %>% count(stages_mca_lf, combined_labs))
-
-```
-
-```{r}
-# stgtbl1[[1]] %>% filter(stages_mca_lf == "Female", combined_labs == "EarlyRing")
-# stgtbl1[[2]] %>% filter(cell_bc == "AAACCCAAGCCTGAGA-1")
-
-```
-
-```{r}
-##Modify the stage labels for MSC14
-multi_ref_stg_tbl2 <- map(multi_ref_stg_tbl1, ~{
-  tbl <- .x
-  
-  map(tbl, ~.x %>% select(any_of(c('cell_bc', 'stages_mca_lf', 'stages_lasse_lf', 'combined_labs')), contains("sim_"), contains("stage_"))) %>% 
-      purrr::reduce(., ~full_join(.x, .y, by = c("cell_bc", "combined_labs"), suffix = c("_mca", "_lasse"))) %>%
-  mutate(
-    stage_final = case_when(
-      combined_labs == "unassigned" & if_any(c('stages_mca_lf', 'stages_lasse_lf'), ~str_detect(.x, "ring|rophozoite|eveloping|Ring|chizont")) ~ stages_lasse_lf, 
-      combined_labs == "unassigned" & if_any(c('stages_mca_lf', 'stages_lasse_lf'), ~str_detect(.x, "Male| male|\\(male|eveloping")) ~ stages_mca_lf,  
-      combined_labs == "unassigned" & if_any(c('stages_mca_lf', 'stages_lasse_lf'), ~str_detect(.x, "Female|female|eveloping")) ~ stages_mca_lf, 
-      T ~ combined_labs),
-    stage_final2 = case_when(
-      stage_final == "unassigned" & if_any(c('stages_mca_lf', 'stages_lasse_lf'), ~str_detect(.x, "ring|rophozoite|eveloping|Ring|chizont")) ~ stages_mca_lf, 
-      T ~ stage_final)
-  )
-})
-
-```
-
-```{r}
-##Modify the stage labels for MSC14
-map(multi_ref_stg_tbl2, ~.x %>% filter(stage_final2 == "unassigned") %>% dim() %>% .[1]) %>% data.frame() %>% t()
-
-```
-
-```{r}
-##Modify the stage labels for MSC14
-map(multi_ref_stg_tbl2, ~.x %>% filter(stage_final2 == "unassigned"))
-
-```
-
-
-```{r}
-## Adding stage annotations to query cells
-all_msc_cb_no_dbt_sct <- list(multi_ref_stg_tbl2, all_msc_cb_no_dbt_sct) %>%
-  pmap(~ ..1 %>%
-         column_to_rownames("cell_bc") %>%
-         select(combined_labs, stage_final, stage_final2) %>% 
-         # mutate(across(c(combined_labs, stage_final, stage_final2), ~str_to_sentence(str_remove_all(., " |gametocyte|Gametocyte|\\(|\\)")))) %>% 
-         mutate(across(c(stage_final2), ~
-           str_replace_all(., c("Trophozoite" = " trophozoite", 
-                                "Ring" = " ring",
-                                "Schizont" = " schizont", 
-                                "early" = "Early",
-                                "late" = "Late",
-                                "DevelopingGametocyte" = "Gametocyte (developing)",
-                                "aleGametocyte" = "ale",
-                                "gametocyte" = "Gametocyte",
-                                "LE" = "(LE)",
-                                "unassigned" = "Unassigned",
-                                "Gametocyte \\(male\\)" = "Male",
-                                "Gametocyte \\(female\\)" = "Female")))
-           ) %>% 
-         mutate(stage_fld = str_replace_all(stage_final2, c("Mid trophozoite" = "Early trophozoite", ".*schizont" = "Schizont"))) %>% 
-         # mutate(across(Stage_MSC, ~droplevels(factor(., levels = stg_refnd_lvls)))) %>%
-         AddMetaData(..2, .) 
-  )
-
-```
-
-
-```{r}
-all_msc_cb_no_dbt_sct %>% map(., ~.x@meta.data %>% count(stage_final2, combined_labs, sR_fine_stg) #%>% 
-                                # filter(stage_final2 == "Midtrophozoite")
-                              )
-
-```
-
-```{r}
-all_msc_cb_no_dbt_sct %>% map(., ~.x@meta.data %>% 
-                                count(stage_final2, combined_labs, sR_fine_stg) %>% 
-                                filter(str_detect(sR_fine_stg, "LE"))
-                              )
-
-```
-```{r}
-## Adding stage annotations to query cells
-imap(all_msc_cb_no_dbt_sct, ~DimPlot(.x, group.by = "stage_fld") + labs(title = .y)) 
-```
-
-```{r}
-## Adding stage annotations to query cells
-imap(all_msc_cb_no_dbt_sct, ~DimPlot(.x, group.by = "stage_final2") + labs(title = .y) + scale_color_manual(values = sp_col_new)) 
-```
-
-
-```{r, warning=FALSE, message=FALSE, fig.width=4, fig.height=4.5}
-## in both edrops and cellbender
-qcd_umaps <- imap(all_msc_cb_no_dbt_sct, ~DimPlot(.x, group.by = "stage_final2", pt.size = 0.01) + 
-                    labs(title = .y) + 
-                    scale_color_manual(values = sp_col_new) +
-                    theme(legend.position = "none",
-                          title = element_text(size = 12),
-                          axis.text = element_blank(),
-                          axis.title = element_blank())) 
-
-```
-
-```{r, warning=FALSE, message=FALSE, fig.height= 10, fig.width= 10, eval=T}
-plot_grid(plotlist = qcd_umaps[!str_detect(names(qcd_umaps), "12")], ncol = 5)
-
-```
-
-
-```{r}
-## pfs16
-imap(all_msc_cb_no_dbt_sct, ~FeaturePlot(.x, label = T, features = "PF3D7-0406200") + labs(title = .y)) 
-```
-
-```{r}
-## dnaj
-imap(all_msc_cb_no_dbt_sct, ~FeaturePlot(.x, label = T, features = "PF3D7-1473200", order = T) + labs(title = .y)) 
-```
-
-```{r}
-## hda1
-imap(all_msc_cb_no_dbt_sct, ~FeaturePlot(.x, label = T, features = "PF3D7-1467600", order = T) + labs(title = .y)) 
-```
-
-```{r}
-## gexp02
-imap(all_msc_cb_no_dbt_sct, ~FeaturePlot(.x, label = T, features = "PF3D7-1102500", order = T) + labs(title = .y)) 
-```
-
-```{r}
-## Adding stage annotations to query cells
-imap(all_msc_cb_no_dbt_sct, ~FeaturePlot(.x, label = T, features = "PF3D7-0406200") + labs(title = .y)) 
-```
-
-```{r}
-map(all_msc_cb_no_dbt_sct, ~.x@meta.data %>% count(stage_fld) %>% arrange(n) )
-
-```
-
-
-```{r, warning=FALSE, message=FALSE, fig.width=16, fig.height=4}
-imap(all_msc_cb_no_dbt_sct, ~DimPlot(.x, label = T, group.by = c("sR_fine_stg", "scf_class_rand", "seurat_clusters"), ncol = 4) + 
-       labs(title = .y) )
-
-```
-
-```{r, warning=FALSE, message=FALSE, fig.width=16, fig.height=4}
-imap(all_msc_cb_no_dbt_sct, ~FeaturePlot(.x, label = T, features = c("nCount_RNA", "nFeature_RNA", "cell_probability", "background_fraction"), ncol = 4) + 
-       labs(title = .y) )
-
-```
-
-
-
-#################################### START compare stage annotations - should be in stage assingment rmd ####################################
-
-
-```{r, message=FALSE, eval=F}
-all_stg_anots <- map(all_msc_cb_no_dbt_sct, ~{
-  .x@meta.data %>% 
-    mutate(lbls = as.character(str_remove_all(sR_fine_stg, "\\(|\\)")),
-           lbls_scmap = as.character(StagePrelim),
-           across(c(lbls, lbls_scmap), ~replace_na(., "missing")))
-  })
-```
-
-
-pheatmap
-```{r , fig.width = 10, fig.height = 5, warning=FALSE, eval=F}
-## Heatmap function for plotting pheatmap for number of cells assigned labels from Clara's and Roser's datasets
-phmap_lab_transfr <- function(dset_lab, col_labs, row_labs, row_labs_c, col_labs_c, strn_order, ttl){
-  anno_row = dset_lab %>% dplyr::count({{ col_labs }}, {{ row_labs }}) %>%
-    pivot_wider(values_from = n, names_from = {{ col_labs }}) %>%
-    column_to_rownames(names(.)[1]) %>%
-    mutate({{ row_labs }} := row_labs_c) %>%
-    dplyr::select({{ row_labs }})
-
-  anno_col = dset_lab %>% dplyr::count({{ col_labs }}, {{ row_labs }}) %>%
-    pivot_wider(values_from = n, names_from = {{ row_labs }}) %>%
-    column_to_rownames(names(.)[1]) %>%
-    mutate({{ col_labs }} := col_labs_c) %>%
-    dplyr::select({{ col_labs }})
-
-  hm_mtx <- dset_lab %>% dplyr::count({{ col_labs }}, {{ row_labs }}) %>%
-    arrange({{ col_labs }}, {{ row_labs }}) %>%
-    # mutate(across(c({{ col_labs }}, {{ row_labs }}), ~droplevels(factor(., levels = strain_levels_univrs)))) %>%
-    mutate(across(c({{ col_labs }}, {{ row_labs }}), )) %>%
-    spread({{ col_labs }},n,fill = 0) %>% ## Using spread instead of pivot_longer since it orders the columns based on factors
-    # pivot_wider(values_from = n, names_from = {{ col_labs }}) %>%
-    # replace(is.na(.), 0) %>%
-    column_to_rownames(names(.)[1]) #%>%
-    # .[,strn_order] %>%
-
-    # print(head(hm_mtx))
-
-    hm_mtx %>%
-    ComplexHeatmap::pheatmap(display_numbers = T,treeheight_row=0, treeheight_col=0, annotation_row = anno_row, annotation_col = anno_col, legend = F, annotation_legend = T, cluster_rows =F, cluster_cols = F, fontsize = 20, annotation_names_row=T, annotation_names_col = T,
-                       # color = 'white',
-                       number_format = "%.0f", main = ttl#,
-                       # annotation_colors = list('minmap' = "green", 'hsat' = "lightblue")
-                       )
-
-}
-
-```
-
-
-
-
-```{r , fig.width = 10, fig.height = 5, warning=FALSE, eval=F}
-#
-imap(all_stg_anots, ~phmap_lab_transfr(.x, col_labs= `lbls_scmap`, row_labs=`lbls`, row_labs_c ='lbls', col_labs_c= 'lbls_scmap', ttl = .y))
-
-```
-#################################### END compare stage annotations ####################################
 
 ```{r, eval=F}
 mthds <- unique(str_remove(names(all_msc_cb_no_dbt_sct), "M.*_"))
